--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,16 +4,26 @@ pipeline {
     stages {
         stage('Build') {
             steps {
+            sh 'make'
+                archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
                 echo 'Building..'
             }
         }
         stage('Test') {
             steps {
+            sh 'make check || true'
+               junit '**/target/*.xml'
                 echo 'Testing..'
             }
         }
         stage('Deploy') {
+        when {
+              expression {
+                currentBuild.result == null || currentBuild.result == 'SUCCESS'
+              }
+            }
             steps {
+            sh 'make publish'
                 echo 'Deploying....'
             }
         }
